# DGtal

./: .drone.yml  .gitmodules  .travis.yml  CMakeLists.txt  ChangeLog
cmake/: CheckDGtalOptionalDependencies.cmake  CpackCtest.cmake
doc/: GeometryPackage.dox
examples/geometry/: CMakeLists.txt
examples/geometry/tools/: CMakeLists.txt  volWatershed.cpp
examples/graph/: CMakeLists.txt  watershed.cpp
examples/topology/: generateSimplicityTables3D.cpp
src/DGtal/geometry/curves/: AlphaThickSegmentComputer.ih
src/DGtal/geometry/doc/: packageGeometry.dox
src/DGtal/geometry/tools/: Watershed.h  Watershed.ih
src/DGtal/geometry/volumes/distance/: ChamferNorm2D.h  ChamferNorm2D.ih  VoronoiMap.ih
src/DGtal/geometry/volumes/sampling/: KorobovSampling.h  KorobovSampling.ih  UniformSampling.h  UniformSampling.ih
src/DGtal/graph/: CUndirectedSimpleGraph.h  Watershed.h  Watershed.ih
src/DGtal/graph/doc/: moduleWatershed.dox  packageGraph.dox
src/DGtal/io/: Display2DFactory.ih  Display3D.ih
src/DGtal/io/boards/: Board3D.h  Board3D.ih
src/DGtal/io/colormaps/: RandomColorMap.h
src/DGtal/io/viewers/: Viewer3D.ih
src/DGtal/shapes/: Mesh.h  Mesh.ih
src/DGtal/shapes/shapesGeometry/: OutputSensitiveConvexHull.h  OutputSensitiveConvexHull.ih
src/DGtal/topology/: CUndirectedSimpleGraph.h  CUndirectedSimpleLocalGraph.h  DomainAdjacency.ih
tests/: CMakeLists.txt
tests/geometry/surfaces/: CMakeLists.txt
tests/geometry/tools/: CMakeLists.txt  testWatershedFromImage.cpp
tests/geometry/volumes/: CMakeLists.txt
tests/geometry/volumes/distance/: CMakeLists.txt  testChamferDT.cpp  testChamferVoro.cpp  testMetricBalls.cpp  testMetrics.cpp
tests/geometry/volumes/sampling/: CMakeLists.txt  testKorobovSampling.cpp  testUniformSampling.cpp
tests/graph/: CMakeLists.txt  testWatershed.cpp  testWatershedFromImage.cpp
tests/io/boards/: testBallQuad.cpp  testBoard3D.cpp
tests/kernel/: testPointVector.cpp
tests/samples/: testwatershed.pgm
tests/shapes/: CMakeLists.txt  testOutputSensitiveCVX.cpp
